pgadmin/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/tp-kubernetes-postgres: "true"
        io.kompose.service: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_CONFIG_SERVER_MODE
              value: "False"
            - name: PGADMIN_DEFAULT_EMAIL
              value: "pgadmin4@pgadmin.org"
            - name: PGADMIN_DEFAULT_PASSWORD
              value: "admin"
          image: dpage/pgadmin4
          name: pgadmin-container
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
