pgadmin/ingress-pga.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
               name: pgadmin
               port: 
                number: 5050
            path: /
